packages/lab/src/stepped-tracker/TrackerStepWrapper/TrackerStepWrapper.css
.saltTrackerStepWrapper-parent {
  display: flex;
  align-items: start;
  width: var(--saltTrackerStep-width, 100%);
  gap: var(--salt-spacing-50);
}

.saltTrackerStepWrapper-nested-group {
  display: grid;
  transition: grid-template-rows var(--salt-duration-perceptible) ease-in-out, opacity var(--salt-duration-perceptible) ease-in-out, visibility var(--salt-duration-perceptible) ease-in-out;
  margin: 0;
  padding: 0;
}

.saltTrackerStepWrapper-nested-group-inner {
  margin: 0;
  padding: 0;
  text-indent: 0;
  list-style-type: none;
  overflow: hidden;
}

.saltTrackerStepWrapper-nested-group[aria-hidden="true"] {
  grid-template-rows: 0fr;
  opacity: 0;
  visibility: hidden;
}

.saltTrackerStepWrapper-nested-group {
  grid-template-rows: 1fr;
  opacity: 1;
  visibility: visible;
}

